--- a/common/data.tex
+++ b/common/data.tex
@@ -1,7 +1,7 @@
 %%% Основные сведения %%%
-\newcommand{\thesisAuthorLastName}{\todo{Фамилия}}
-\newcommand{\thesisAuthorOtherNames}{\todo{Имя Отчество}}
-\newcommand{\thesisAuthorInitials}{\todo{И.\,О.}}
+\newcommand{\thesisAuthorLastName}{Толстоногов}
+\newcommand{\thesisAuthorOtherNames}{Антон Юрьевич}
+\newcommand{\thesisAuthorInitials}{А.\,Ю.}
 \newcommand{\thesisAuthor}             % Диссертация, ФИО автора
 {%
     \texorpdfstring{% \texorpdfstring takes two arguments and uses the first for (La)TeX and the second for pdf
@@ -17,33 +17,33 @@
 \newcommand{\thesisTitle}              % Диссертация, название
 {\todo{Название диссертационной работы}}
 \newcommand{\thesisSpecialtyNumber}    % Диссертация, специальность, номер
-{\todo{XX.XX.XX}}
+{05.13.01}
 \newcommand{\thesisSpecialtyTitle}     % Диссертация, специальность, название
-{\todo{Название специальности}}
+{Системный анализ, управление и обработка информации (по отраслям)}
 \newcommand{\thesisDegree}             % Диссертация, ученая степень
-{\todo{кандидата физико-математических наук}}
+{кандидата технических наук}
 \newcommand{\thesisDegreeShort}        % Диссертация, ученая степень, краткая запись
-{\todo{канд. физ.-мат. наук}}
+{канд. техн. наук}
 \newcommand{\thesisCity}               % Диссертация, город написания диссертации
-{\todo{Город}}
+{Владивосток}
 \newcommand{\thesisYear}               % Диссертация, год написания диссертации
-{\todo{20XX}}
+{2021}
 \newcommand{\thesisOrganization}       % Диссертация, организация
-{\todo{Название учреждения, в~котором выполнялась данная диссертационная работа}}
+{Федеральное государственное автономное образовательное учреждение высшего образования «Дальневосточный федеральный университет»}
 \newcommand{\thesisOrganizationShort}  % Диссертация, краткое название организации для доклада
-{\todo{НазУчДисРаб}}
+{ДВФУ}
 
 \newcommand{\thesisInOrganization}     % Диссертация, организация в предложном падеже: Работа выполнена в ...
-{\todo{учреждении, в~котором выполнялась данная диссертационная работа}}
+{федеральном государственном автономном образовательном учреждении высшего образования «Дальневосточный федеральный университет»}
 
 \newcommand{\supervisorFio}            % Научный руководитель, ФИО
-{\todo{Фамилия Имя Отчество}}
+{Костенко Владимир Владимирович}
 \newcommand{\supervisorRegalia}        % Научный руководитель, регалии
-{\todo{уч. степень, уч. звание}}
+{канд. техн. наук}
 \newcommand{\supervisorFioShort}       % Научный руководитель, ФИО
-{\todo{И.\,О.~Фамилия}}
+{В.\,В.~Костенко}
 \newcommand{\supervisorRegaliaShort}   % Научный руководитель, регалии
-{\todo{уч.~ст.,~уч.~зв.}}
+{к.т.н.}
 
 
 \newcommand{\opponentOneFio}           % Оппонент 1, ФИО
