--- a/Dissertation/setup.tex
+++ b/Dissertation/setup.tex
@@ -66,6 +66,8 @@
                               % 1 --- пропорционально изменяющийся размер
                               %       в зависимости от базового шрифта
 
+\setcounter{bibliosel}{1}
+
 %% Подпись таблиц %%
 
 % Смещение строк подписи после первой строки
@@ -116,8 +118,8 @@
 
 %%% Цвета гиперссылок %%%
 % Latex color definitions: http://latexcolor.com/
-\definecolor{linkcolor}{rgb}{0.9,0,0}
-\definecolor{citecolor}{rgb}{0,0.6,0}
+\definecolor{linkcolor}{rgb}{0,0,0}
+\definecolor{citecolor}{rgb}{0,0,0}
 \definecolor{urlcolor}{rgb}{0,0,1}
 %\definecolor{linkcolor}{rgb}{0,0,0} %black
 %\definecolor{citecolor}{rgb}{0,0,0} %black
