Добавлены собственные стили записи векторов и мат. пространств.

--- a/Dissertation/userstyles.tex
+++ b/Dissertation/userstyles.tex
@@ -309,3 +309,9 @@
 \renewcommand{\chi}{\upchi}
 \renewcommand{\psi}{\uppsi}
 \renewcommand{\omega}{\upomega}
+
+% Красивая запись полужирного написания в math режиме
+\newcommand{\vect}[1]{\boldsymbol{#1}}
+
+% Красивая запись пространств 
+\newcommand{\mathspace}[1]{\mathbb{#1}}
