Добавлена библиография по первой главе.

--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -1,3 +1,595 @@
+@inproceedings{valasek2002design,
+  title={Design and control of under-actuated and over-actuated mechanical systems-challenges of mechanics and mechatronics},
+  author={Valasek, Michael},
+  booktitle={Computational mechanics in vehicle system dynamics-proceedings of 5th World congress on computational mechanics held in Vienna, Austria, july 2002-supplement to vehicle system dynamics},
+  year={2002},
+  language = {english}
+}
+
+@BOOK{бриллиантов2005разработка,
+  author={Бриллиантов, Александр Николаевич},
+  title={Разработка и исследование основ построения энергетических систем подводных аппаратов : дис. канд. тех. наук: 25.00.28},
+  year={2005},
+  school={Рос. акад. наук, Ин-т океанологии им. ПП Ширшова Москва},
+  pages={207},
+  language = {russian}
+}
+
+@inproceedings{enns1998control,
+  title={Control allocation approaches},
+  author={Enns, Dale},
+  booktitle={Guidance, Navigation, and Control Conference and Exhibit},
+  pages={4109},
+  year={1998},
+  language = {english}
+}
+
+@book{craig2009introduction,
+  title={Introduction to robotics: mechanics and control, 3/E},
+  author={Craig, John J},
+  year={2009},
+  publisher={Pearson Education India},
+  language = {english}
+}
+
+@phdthesis{bordignon1996constrained,
+  title={Constrained control allocation for systems with redundant control effectors},
+  author={Bordignon, Kenneth A},
+  year={1996},
+  school={Virginia Tech},
+  language = {english}
+}
+
+@inproceedings{fossen2006survey,
+  title={A survey of control allocation methods for ships and underwater vehicles},
+  author={Fossen, Thor I and Johansen, Tor A},
+  booktitle={2006 14th Mediterranean conference on control and automation},
+  pages={1--6},
+  year={2006},
+  organization={IEEE},
+  language = {english}
+}
+
+@inproceedings{oppenheimer2006control,
+  title={Control allocation for over-actuated systems},
+  author={Oppenheimer, Michael W and Doman, David B and Bolender, Michael A},
+  booktitle={2006 14th Mediterranean Conference on Control and Automation},
+  pages={1--6},
+  year={2006},
+  organization={IEEE},
+  language = {english}
+}
+
+@article{10.1016/j.automatica.2013.01.035,
+  title={Control allocation—a survey},
+  author={Johansen, Tor A and Fossen, Thor I},
+  journal={Automatica},
+  volume={49},
+  number={5},
+  pages={1087--1103},
+  year={2013},
+  publisher={Elsevier},
+  doi = {10.1016/j.automatica.2013.01.035},
+  language = {english}
+}
+
+@article{филаретов2016особенности,
+  title={Особенности синтеза высокоточных систем управления скоростным движением и стабилизацией подводных аппаратов в пространстве},
+  author={Филаретов, Владимир Федорович and Юхимец, Дмитрий Александрович},
+  year={2016},
+  language = {russian}
+}
+
+@article{мартынова2020подход,
+  title={Подход к реконфигурации системы управления движением автономного необитаемого подводного аппарата},
+  author={Мартынова, ЛА and Розенгауз, МБ},
+  journal={Гироскопия и навигация},
+  volume={28},
+  number={2},
+  pages={131--146},
+  year={2020},
+  publisher={Акционерное общество" Концерн" Центральный научно-исследовательский институт~…},
+  language = {russian}
+}
+
+@article{зыбин2014аналитическое,
+  title={Аналитическое решение задачи оптимальной реконфигурации системы управления летательного аппарата при отказе нескольких органов управления},
+  author={Зыбин, ЕЮ and Косьянчук, ВВ and Кульчак, АМ},
+  journal={Мехатроника, автоматизация, управление},
+  number={7},
+  pages={59--66},
+  year={2014},
+  publisher={Общество с ограниченной ответственностью Издательство Новые технологии},
+  language = {russian}
+}
+
+@article{амбросовский2013распределение,
+  title={Распределение упоров в задаче позиционирования подвижных объектов.},
+  author={Амбросовский, Виктор Михайлович and Коренев, Алексей Сергеевич and Хабаров, Сергей Петрович},
+  journal={Известия СПбГЭТУ ЛЭТИ},
+  number={7},
+  pages={63},
+  year={2013},
+  publisher={Федеральное государственное автономное образовательное учреждение высшего~…},
+  language = {russian}
+}
+
+@article{воловодов2003распределение,
+  title={Распределение ресурсов управления при пространственной стабилизации подвижных объектов},
+  author={Воловодов, СК and Черняев, МГ and Каверинский, АЮ and Воловодов, СС},
+  journal={Гироскопия и навигация},
+  number={1},
+  pages={30--42},
+  year={2003},
+  publisher={Акционерное общество" Концерн" Центральный научно-исследовательский институт~…},
+  language = {russian}
+}
+
+@inproceedings{амбросовский2014алгоритмы,
+  title={Алгоритмы управления в задачах позиционирования динамических объектов},
+  author={Амбросовский, ВМ and Коренев, АС},
+  booktitle={XII всероссийское совещание по проблемам управления ВСПУ-2014},
+  pages={3523--3533},
+  year={2014},
+  language = {russian}
+}
+
+@BOOK{власов2016адаптивное,
+  title={Адаптивное управление плоским движением надводного роботизированного объекта: дис. канд. тех. наук: 05.13.01},
+  author={Власов, Сергей Михайлович},
+  year={2016},
+  school={С.-Петерб. нац. исслед. ун-т информац. технологий, механики и оптики},
+  pages={110},
+  language = {russian}
+}
+
+@article{10.1016/j.automatica.2004.09.007, 
+  year = {2005},
+  title = {{Resolving actuator redundancy—optimal control vs. control allocation}}, 
+  author = {Härkegård, Ola and Glad, S. Torkel}, 
+  journal = {Automatica}, 
+  issn = {0005-1098}, 
+  doi = {10.1016/j.automatica.2004.09.007}, 
+  pages = {137--144}, 
+  number = {1}, 
+  volume = {41},
+  language = {english}
+}
+
+@article{10.1049/iet-cta.2009.0265, 
+  year = {2010}, 
+  title = {{Position-tracking control of underactuated autonomous underwater vehicles in the presence of unknown ocean currents}}, 
+  author = {Zhang, J Z and Wei, Y J and Bi, F Y and Cao, W}, 
+  journal = {IET Control Theory \& Applications}, 
+  issn = {1751-8644}, 
+  doi = {10.1049/iet-cta.2009.0265}, 
+  pages = {2369--2380}, 
+  number = {11}, 
+  volume = {4},
+  language = {english}
+}
+
+@article{10.1109/cdc.2002.1184546, 
+  year = {2002},
+  title = {{Global output feedback universal controller for stabilization and tracking of underactuated ODIN-an underwater vehicle}}, 
+  author = {Do, K.D and Jiang, Z.P. and Pan, J. and Nijmeijer, H.}, 
+  journal = {Proceedings of the 41st IEEE Conference on Decision and Control, 2002}, 
+  doi = {10.1109/cdc.2002.1184546},
+  pages = {504--509}, 
+  volume = {1},
+  language = {english}
+}
+
+@article{yuh2000design,
+  title={Design and control of autonomous underwater robots: A survey},
+  author={Yuh, Junku},
+  journal={Autonomous Robots},
+  volume={8},
+  number={1},
+  pages={7--24},
+  year={2000},
+  publisher={Springer},
+  language = {english}
+}
+
+@article{борейко2011малогабаритный,
+  title={Малогабаритный многофункциональный автономный необитаемый подводный аппарат" МТ-2010"},
+  author={Борейко, АА and Горнак, ВЕ and Мальцева, СВ and Матвиенко, ЮВ and Михайлов, ДН},
+  journal={Подводные исследования и робототехника},
+  number={2},
+  pages={37--42},
+  year={2011},
+  publisher={Федеральное государственное бюджетное учреждение науки Институт проблем~…},
+  language = {russian}
+}
+
+@article{горнак2007ммт,
+  title={ММТ-3000-новый малогабаритный автономный необитаемый подводный аппарат Института проблем морских технологий ДВО РАН},
+  author={Горнак, ВЕ and Икзарцев, АВ and Львов, ОЮ and Матвиенко, ЮВ and Щербатюк, АФ and Инзарцев, АВ},
+  journal={Подводные исследования и робототехника},
+  number={1},
+  pages={12--20},
+  year={2007},
+  publisher={Федеральное государственное бюджетное учреждение науки Институт проблем~…},
+  language = {russian}
+}
+
+@article{fossen1991adaptive,
+  title={Adaptive control of nonlinear systems: A case study of underwater robotic systems},
+  author={Fossen, Thor I and Sagatun, Svein I},
+  journal={Journal of Robotic Systems},
+  volume={8},
+  number={3},
+  pages={393--412},
+  year={1991},
+  publisher={Wiley Online Library},
+  language = {english}
+}
+
+@article{durham1993constrained,
+  title={Constrained control allocation},
+  author={Durham, Wayne C},
+  journal={Journal of Guidance, control, and Dynamics},
+  volume={16},
+  number={4},
+  pages={717--725},
+  year={1993},
+  language = {english}
+}
+
+@article{bordingnon1995closed,
+  title={Closed-form solutions to constrained control allocation problem},
+  author={Bordingnon, Kenneth A and Durham, Wayne C},
+  journal={Journal of Guidance, Control, and Dynamics},
+  volume={18},
+  number={5},
+  pages={1000--1007},
+  year={1995},
+  language = {english}
+}
+
+@article{petersen2002fast,
+  title={Fast implementation of direct allocation with extension to coplanar controls},
+  author={Petersen, John AM and Bodson, Marc},
+  journal={Journal of Guidance, Control, and Dynamics},
+  volume={25},
+  number={3},
+  pages={464--473},
+  year={2002},
+  language = {english}
+}
+
+@article{костенко2015вопросу,
+  title={К вопросу обеспечения независимости управляющих воздействий движительно-рулевого комплекса подводного аппарата},
+  author={Костенко, ВВ and Павин, АМ},
+  journal={Технические проблемы освоения Мирового океана},
+  volume={6},
+  pages={118--123},
+  year={2015},
+  publisher={Федеральное государственное бюджетное учреждение науки Институт проблем~…},
+  language={russian}
+}
+
+@article{petersen2005constrained,
+  title={Constrained quadratic programming techniques for control allocation},
+  author={Petersen, John AM and Bodson, Marc},
+  journal={IEEE Transactions on Control Systems Technology},
+  volume={14},
+  number={1},
+  pages={91--98},
+  year={2005},
+  publisher={IEEE},
+  language={english}
+}
+
+@inproceedings{harkegard2002efficient,
+  title={Efficient active set algorithms for solving constrained least squares problems in aircraft control allocation},
+  author={Harkegard, Ola},
+  booktitle={Proceedings of the 41st IEEE Conference on Decision and Control, 2002.},
+  volume={2},
+  pages={1295--1300},
+  year={2002},
+  organization={IEEE},
+  language={english}
+}
+
+@article{bodson2002evaluation,
+  title={Evaluation of optimization methods for control allocation},
+  author={Bodson, Marc},
+  journal={Journal of Guidance, Control, and Dynamics},
+  volume={25},
+  number={4},
+  pages={703--711},
+  year={2002},
+  language={english}
+}
+
+@article{10.2514/1.11607, 
+  year = {2012}, 
+  keywords = {dynamic allocation problem,aircraft}, 
+  title = {{Dynamic Control Allocation Using Constrained Quadratic Programming}}, 
+  author = {Härkegård, Ola}, 
+  journal = {Journal of Guidance, Control, and Dynamics}, 
+  issn = {0731-5090}, 
+  doi = {10.2514/1.11607}, 
+  pages = {1028--1034}, 
+  number = {6}, 
+  volume = {27},
+  language={english}
+}
+
+@article{10.1016/j.automatica.2008.03.031, 
+  year = {2008},
+  title = {{Adaptive control allocation}}, 
+  author = {Tjønnås, Johannes and Johansen, Tor A.}, 
+  journal = {Automatica}, 
+  issn = {0005-1098}, 
+  doi = {10.1016/j.automatica.2008.03.031},
+  pages = {2754--2765}, 
+  number = {11}, 
+  volume = {44},
+  language={english}
+}
+
+@article{10.1016/j.automatica.2009.01.013, 
+  year = {2009},
+  title = {{Dynamic allocation for input redundant control systems}}, 
+  author = {Zaccarian, Luca}, 
+  journal = {Automatica}, 
+  issn = {0005-1098}, 
+  doi = {10.1016/j.automatica.2009.01.013}, 
+  pages = {1431--1438}, 
+  number = {6}, 
+  volume = {45},
+  language={english}
+}
+
+@article{10.1016/j.automatica.2014.10.112, 
+  year = {2015},
+  title = {{On input allocation-based regulation for linear over-actuated systems}}, 
+  author = {Galeani, Sergio and Serrani, Andrea and Varano, Gianluca and Zaccarian, Luca}, 
+  journal = {Automatica}, 
+  issn = {0005-1098}, 
+  doi = {10.1016/j.automatica.2014.10.112},  
+  pages = {346--354}, 
+  volume = {52},
+  language={english}
+}
+
+@article{10.1109/cdc.2012.6426209, 
+  year = {2012},
+  title = {{Output regulation for over-actuated linear systems via inverse model allocation}}, 
+  author = {Serrani, A.}, 
+  journal = {2012 IEEE 51st IEEE Conference on Decision and Control (CDC)}, 
+  doi = {10.1109/cdc.2012.6426209},
+  pages = {4871--4876},
+  language={english}
+}
+
+@article{10.1016/j.automatica.2020.109265, 
+  year = {2020},
+  title = {{Optimal dynamic Control Allocation with guaranteed constraints and online Reinforcement Learning}}, 
+  author = {Kolaric, Patrik and Lopez, Victor G. and Lewis, Frank L.}, 
+  journal = {Automatica}, 
+  issn = {0005-1098}, 
+  doi = {10.1016/j.automatica.2020.109265},
+  pages = {109265}, 
+  volume = {122},
+  language={english}
+}
+
+@article{10.1016/j.ifacol.2019.08.065, 
+  year = {2019},
+  title = {{Model Predictive Control Allocation of an Over-actuated Electric Vehicle with Single Wheel Actuators}}, 
+  author = {Schwartz, Manuel and Siebenrock, Florian and Hohmann, Sören}, 
+  journal = {IFAC-PapersOnLine}, 
+  issn = {2405-8963}, 
+  doi = {10.1016/j.ifacol.2019.08.065}, 
+  pages = {162--169}, 
+  number = {8}, 
+  volume = {52},
+  language={english}
+}
+
+@article{10.1016/j.ifacol.2015.10.048, 
+  year = {2015},
+  title = {{Model Predictive Control Allocation in Electric Vehicle Drive Trains}}, 
+  author = {Bächle, T. and Graichen, K. and Buchholz, M. and Dietmayer, K.}, 
+  journal = {IFAC-PapersOnLine}, 
+  issn = {2405-8963}, 
+  doi = {10.1016/j.ifacol.2015.10.048}, 
+  pages = {335--340}, 
+  number = {15}, 
+  volume = {48},
+  language={english}
+}
+
+@article{10.1007/s11768-019-7231-9, 
+  year = {2019},
+  title = {{Guaranteed feasible control allocation using model predictive control}}, 
+  author = {Naderi, Mehdi and Sedigh, Ali Khaki and Johansen, Tor Arne}, 
+  journal = {Control Theory and Technology}, 
+  issn = {2095-6983}, 
+  doi = {10.1007/s11768-019-7231-9}, 
+  pages = {252--264}, 
+  number = {3}, 
+  volume = {17},
+  language={english}
+}
+
+@article{10.1109/icca.2011.6137940, 
+  year = {2011},
+  title = {{Dynamic Model Predictive Control Allocation using CVXGEN}}, 
+  author = {Hanger, Martin and Johansen, Tor A. and Mykland, Geir Kåre and Skullestad, Aage}, 
+  journal = {2011 9th IEEE International Conference on Control and Automation (ICCA)}, 
+  doi = {10.1109/icca.2011.6137940},
+  pages = {417--422},
+  language={english}
+}
+
+@article{10.1007/s12555-012-0385-6, 
+  year = {2014},
+  title = {{Development and control of a new AUV platform}}, 
+  author = {Loc, Mai Ba and Choi, Hyeung-Sik and Seo, Jung-Min and Baek, Se-Hoon and Kim, Joon-Young}, 
+  journal = {International Journal of Control, Automation and Systems}, 
+  issn = {1598-6446}, 
+  doi = {10.1007/s12555-012-0385-6}, 
+  pages = {886--894}, 
+  number = {4}, 
+  volume = {12},
+  language={english}
+}
+
+@article{10.1109/oceans-yeosu.2012.6263496, 
+  year = {2012},
+  title = {{Development of The Cruising-AUV “Jinbei”}}, 
+  journal = {2012 Oceans - Yeosu}, 
+  doi = {10.1109/oceans-yeosu.2012.6263496},
+  pages = {1--4}, 
+  volume = {1},
+  language={english}
+}
+
+@article{10.1109/oceans-yeosu.2012.6263498, 
+  year = {2012},
+  title = {{Development of The working-AUV “Otohime”}}, 
+  journal = {2012 Oceans - Yeosu}, 
+  doi = {10.1109/oceans-yeosu.2012.6263498},
+  pages = {1--5}, 
+  volume = {1},
+  language={english}
+}
+
+@article{10.1109/tcst.2003.821952, 
+  year = {2004},
+  title = {{Constrained nonlinear control allocation with singularity avoidance using sequential quadratic programming}}, 
+  author = {Johansen, T.A. and Fossen, T.I. and Berge, S.P.}, 
+  journal = {IEEE Transactions on Control Systems Technology}, 
+  issn = {1063-6536}, 
+  doi = {10.1109/tcst.2003.821952},
+  pages = {211--216}, 
+  number = {1}, 
+  volume = {12},
+  language={english}
+}
+
+@inproceedings{poonamallee2004nonlinear,
+  title={A nonlinear programming approach for control allocation},
+  author={Poonamallee, Vishnu L and Yurkovich, Stephen and Serrani, Andrea and Doman, David B},
+  booktitle={Proceedings of the 2004 American control conference},
+  volume={2},
+  pages={1689--1694},
+  year={2004},
+  organization={IEEE},
+  language={english}
+}
+
+@article{10.1109/cdc.2004.1429240, 
+  year = {2004},
+  title = {{Optimizing Nonlinear Control Allocation}}, 
+  author = {Johansen, Tor A.}, 
+  journal = {2004 43rd IEEE Conference on Decision and Control (CDC) (IEEE Cat. No.04CH37601)}, 
+  doi = {10.1109/cdc.2004.1429240},
+  pages = {3435--3440}, 
+  volume = {4},
+  language={english}
+}
+
+@article{10.4173/mic.2008.2.4, 
+  year = {2008}, 
+  title = {{Optimizing Adaptive Control Allocation With Actuator Dynamics}}, 
+  author = {Tjønnås, Johannes and Johansen, Tor A}, 
+  journal = {Modeling, Identification and Control: A Norwegian Research Bulletin}, 
+  issn = {0332-7353}, 
+  doi = {10.4173/mic.2008.2.4}, 
+  pages = {69--76}, 
+  number = {2}, 
+  volume = {29},
+  language={english}
+}
+
+@article{mattingley2010real,
+  title={Real-time convex optimization in signal processing},
+  author={Mattingley, John and Boyd, Stephen},
+  journal={IEEE Signal processing magazine},
+  volume={27},
+  number={3},
+  pages={50--61},
+  year={2010},
+  publisher={IEEE},
+  language={english}
+}
+
+@article{ferreau2014qpoases,
+  title={qpOASES: A parametric active-set algorithm for quadratic programming},
+  author={Ferreau, Hans Joachim and Kirches, Christian and Potschka, Andreas and Bock, Hans Georg and Diehl, Moritz},
+  journal={Mathematical Programming Computation},
+  volume={6},
+  number={4},
+  pages={327--363},
+  year={2014},
+  publisher={Springer},
+  language={english}
+}
+
+@article{jones2012fast,
+  title={Fast predictive control: Real-time computation and certification},
+  author={Jones, Colin N and Domahidi, Alexander and Morari, Manfred and Richter, Stefan and Ullmann, Fabian and Zeilinger, Melanie},
+  journal={IFAC Proceedings Volumes},
+  volume={45},
+  number={17},
+  pages={94--98},
+  year={2012},
+  publisher={Elsevier},
+  language={english}
+}
+
+@article{houska2011acado,
+  title={ACADO toolkit—An open-source framework for automatic control and dynamic optimization},
+  author={Houska, Boris and Ferreau, Hans Joachim and Diehl, Moritz},
+  journal={Optimal Control Applications and Methods},
+  volume={32},
+  number={3},
+  pages={298--312},
+  year={2011},
+  publisher={Wiley Online Library},
+  language={english}
+}
+
+@inproceedings{kvasnica2004multi,
+  title={Multi-parametric toolbox (MPT)},
+  author={Kvasnica, Michal and Grieder, Pascal and Baoti{\'c}, Mato and Morari, Manfred},
+  booktitle={International workshop on hybrid systems: Computation and control},
+  pages={448--462},
+  year={2004},
+  organization={Springer},
+  language={english}
+}
+
+@article{palmer2008modelling,
+  title={Modelling tunnel thrusters for autonomous underwater vehicles},
+  author={Palmer, Alistair and Hearn, Grant E and Stevenson, Peter},
+  journal={IFAC Proceedings Volumes},
+  volume={41},
+  number={1},
+  pages={91--96},
+  year={2008},
+  publisher={Elsevier},
+  language={english}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 % ГОСТ Р 7.0.11-2011, Приложение Б, Книги
 @BOOK{Sychev,
   author = {Сычёв, М. С.},
