--- a/Dissertation/disstyles.tex
+++ b/Dissertation/disstyles.tex
@@ -107,7 +107,7 @@
     \chapterstyle{default}
     \setlength{\beforechapskip}{0pt}
     \setlength{\midchapskip}{0pt}
-    \setlength{\afterchapskip}{\theintvl\curtextsize}
+    \setlength{\afterchapskip}{2\onelineskip}
     \renewcommand*{\chapnamefont}{\basegostsectionfont}
     \renewcommand*{\chapnumfont}{\basegostsectionfont}
     \renewcommand*{\chaptitlefont}{\basegostsectionfont}
@@ -149,12 +149,18 @@
 }{}%
 
 %%% Интервалы между заголовками
-\setbeforesecskip{\theintvl\curtextsize}% Заголовки отделяют от текста сверху и снизу тремя интервалами (ГОСТ Р 7.0.11-2011, 5.3.5).
-\setaftersecskip{\theintvl\curtextsize}
-\setbeforesubsecskip{\theintvl\curtextsize}
-\setaftersubsecskip{\theintvl\curtextsize}
-\setbeforesubsubsecskip{\theintvl\curtextsize}
-\setaftersubsubsecskip{\theintvl\curtextsize}
+% \setbeforesecskip{\theintvl\curtextsize}% Заголовки отделяют от текста сверху и снизу тремя интервалами (ГОСТ Р 7.0.11-2011, 5.3.5).
+% \setaftersecskip{\theintvl\curtextsize}
+% \setbeforesubsecskip{\theintvl\curtextsize}
+% \setaftersubsecskip{\theintvl\curtextsize}
+% \setbeforesubsubsecskip{\theintvl\curtextsize}
+% \setaftersubsubsecskip{\theintvl\curtextsize}
+\setbeforesecskip{3.5ex}
+\setaftersecskip{3.3ex}
+\setbeforesubsecskip{3.5ex}
+\setaftersubsecskip{3.3ex}
+\setbeforesubsubsecskip{3.5ex}
+\setaftersubsubsecskip{3.3ex}
 
 %%% Вертикальные интервалы глав (\chapter) в оглавлении как и у заголовков
 % раскомментировать следующие 2
