Добавлено описание некоторых сокращений.

--- a/Dissertation/dictionary.tex
+++ b/Dissertation/dictionary.tex
@@ -1,6 +1,8 @@
 \chapter*{Словарь терминов}             % Заголовок
 \addcontentsline{toc}{chapter}{Словарь терминов}  % Добавляем его в оглавление
 
-\textbf{TeX} : Cистема компьютерной вёрстки, разработанная американским профессором информатики Дональдом Кнутом
+\textbf{ПА} : Подводный аппарат
 
-\textbf{панграмма} : Короткий текст, использующий все или почти все буквы алфавита
+\textbf{ДРК} : Движительно-рулевой комплекс
+
+\textbf{ИМ} : Исполнительные механизмы
