--- a/common/data.tex
+++ b/common/data.tex
@@ -1,7 +1,7 @@
 %%% Основные сведения %%%
-\newcommand{\thesisAuthorLastName}{\fixme{Фамилия}}
-\newcommand{\thesisAuthorOtherNames}{\fixme{Имя Отчество}}
-\newcommand{\thesisAuthorInitials}{\fixme{И.\,О.}}
+\newcommand{\thesisAuthorLastName}{Толстоногов}
+\newcommand{\thesisAuthorOtherNames}{Антон Юрьевич}
+\newcommand{\thesisAuthorInitials}{А.Ю.}
 \newcommand{\thesisAuthor}             % Диссертация, ФИО автора
 {%
     \texorpdfstring{% \texorpdfstring takes two arguments and uses the first for (La)TeX and the second for pdf
@@ -15,32 +15,28 @@
 %\newcommand{\thesisUdk}                % Диссертация, УДК
 %{\fixme{xxx.xxx}}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\fixme{Длинное название диссертационной работы, состоящее из~достаточно большого
-количества слов, совсем длинное длинное длинное длинное название, из~которого
-простому обывателю знакомы, в~лучшем случае, лишь отдельные слова}}
+{Разработка методов энергоэффективного управления избыточным движительно-рулевым комплексом подводного аппарата}
 \newcommand{\thesisSpecialtyNumber}    % Диссертация, специальность, номер
-{\fixme{XX.XX.XX}}
+{05.13.01}
 \newcommand{\thesisSpecialtyTitle}     % Диссертация, специальность, название (название взято с сайта ВАК для примера)
-{\fixme{Технология обработки, хранения и~переработки злаковых, бобовых культур,
-крупяных продуктов, плодоовощной продукции и~виноградарства}}
+{Системный анализ, управление и обработка информации (по отраслям)}
 %% \newcommand{\thesisSpecialtyTwoNumber} % Диссертация, вторая специальность, номер
 %% {\fixme{XX.XX.XX}}
 %% \newcommand{\thesisSpecialtyTwoTitle}  % Диссертация, вторая специальность, название
 %% {\fixme{Теория и~методика физического воспитания, спортивной тренировки,
 %% оздоровительной и~адаптивной физической культуры}}
 \newcommand{\thesisDegree}             % Диссертация, ученая степень
-{\fixme{кандидата физико-математических наук}}
+{кандидата технических наук}
 \newcommand{\thesisDegreeShort}        % Диссертация, ученая степень, краткая запись
-{\fixme{канд. физ.-мат. наук}}
+{канд. техн. наук}
 \newcommand{\thesisCity}               % Диссертация, город написания диссертации
-{\fixme{Город}}
+{Владивосток}
 \newcommand{\thesisYear}               % Диссертация, год написания диссертации
 {\the\year}
 \newcommand{\thesisOrganization}       % Диссертация, организация
-{\fixme{Федеральное государственное автономное образовательное учреждение высшего
-образования <<Длинное название образовательного учреждения <<АББРЕВИАТУРА>>}}
+{Федеральное государственное автономное образовательное учреждение высшего образования «Дальневосточный федеральный университет»}
 \newcommand{\thesisOrganizationShort}  % Диссертация, краткое название организации для доклада
-{\fixme{НазУчДисРаб}}
+{ДВФУ}
 
 \newcommand{\thesisInOrganization}     % Диссертация, организация в предложном падеже: Работа выполнена в ...
 {\fixme{учреждении с~длинным длинным длинным длинным названием, в~котором
@@ -48,13 +44,13 @@
 
 %% \newcommand{\supervisorDead}{}           % Рисовать рамку вокруг фамилии
 \newcommand{\supervisorFio}              % Научный руководитель, ФИО
-{\fixme{Фамилия Имя Отчество}}
+{Костенко Владимир Владимирович}
 \newcommand{\supervisorRegalia}          % Научный руководитель, регалии
-{\fixme{уч. степень, уч. звание}}
+{кандидат технических наук}
 \newcommand{\supervisorFioShort}         % Научный руководитель, ФИО
-{\fixme{И.\,О.~Фамилия}}
+{В.\,В.~Костенко}}
 \newcommand{\supervisorRegaliaShort}     % Научный руководитель, регалии
-{\fixme{уч.~ст.,~уч.~зв.}}
+{канд. техн. наук}
 
 %% \newcommand{\supervisorTwoDead}{}        % Рисовать рамку вокруг фамилии
 %% \newcommand{\supervisorTwoFio}           % Второй научный руководитель, ФИО
