Частично прописаны части касаемые актуальности, целей и задач и пр. стержневых вещей диссертации.

--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,50 +1,33 @@
+{\actuality}
+Задача распределения управляющих воздействий (control allocation) возникает естественным образом для избыточного (over-actuated) ДРК ПА, то есть такого ДРК в котором ИМ (рули управления, основные и подруливающие движители) больше чем количество доступных для управления степеней свободы. Использование ДРК такого типа широко распространено по следующим причинам:
+\begin{itemize}
+    \item в виду того, что подводные операции сопряжены с высокой степенью риска, избыточность необходима для реализации функций резервирования систем управления движением подводного аппарата;
+    \item в силу гидродинамических особенностей функционирования при различных режимах движения (позиционный, крейсерский) часть исполнительных механизмов ДРК будет работать лучше или хуже; в соответствии с этим, при разработке многоцелевых подводных аппаратов необходимо использовать избыточные комплекты ИМ \cite{valasek2002design}.
+    \item избыточная конфигурация ДРК при энергетически оптимальном распределении управляющего воздействия позволяет сократить затраты энергии на 20-25\% по сравнению с эквивалентной неизбыточной конфигурацией \cite{бриллиантов2005разработка}.
+\end{itemize}
 
-{\actuality} Обзор, введение в тему, обозначение места данной работы в
-мировых исследованиях и~т.\:п., можно использовать ссылки на~другие
-работы~\autocite{Gosele1999161,Lermontov}
-(если их~нет, то~в~автореферате
-автоматически пропадёт раздел <<Список литературы>>). Внимание! Ссылки
-на~другие работы в~разделе общей характеристики работы можно
-использовать только при использовании \verb!biblatex! (из-за технических
-ограничений \verb!bibtex8!. Это связано с тем, что одна
-и~та~же~характеристика используются и~в~тексте диссертации, и в
-автореферате. В~последнем, согласно ГОСТ, должен присутствовать список
-работ автора по~теме диссертации, а~\verb!bibtex8! не~умеет выводить в~одном
-файле два списка литературы).
-При использовании \verb!biblatex! возможно использование исключительно
-в~автореферате подстрочных ссылок
-для других работ командой \verb!\autocite!, а~также цитирование
-собственных работ командой \verb!\cite!. Для этого в~файле
-\verb!common/setup.tex! необходимо присвоить положительное значение
-счётчику \verb!\setcounter{usefootcite}{1}!.
+Решение задачи распределения управляющих воздействий ДРК позволяет оптимизировать энергетические затраты на движение ПА, обеспечить отказоустойчивость системы управления, и уменьшить механический износ ИМ в условиях накладываемых на них ограничений \cite{enns1998control}.
+Исторически первой эта задача возникла в двух областях: для систем управления многостепенными манипуляторами \cite{craig2009introduction} и самолётами \cite{bordignon1996constrained}. 
+Основной целью тогда было создание систем аккомодации, то есть формирования такой системы управления движением, которая была бы устойчива к выходу из строя отдельных исполнительных механизмов.
 
-Для генерации содержимого титульного листа автореферата, диссертации
-и~презентации используются данные из файла \verb!common/data.tex!. Если,
-например, вы меняете название диссертации, то оно автоматически
-появится в~итоговых файлах после очередного запуска \LaTeX. Согласно
-ГОСТ 7.0.11-2011 <<5.1.1 Титульный лист является первой страницей
-диссертации, служит источником информации, необходимой для обработки и
-поиска документа>>. Наличие логотипа организации на~титульном листе
-упрощает обработку и~поиск, для этого разметите логотип вашей
-организации в папке images в~формате PDF (лучше найти его в векторном
-варианте, чтобы он хорошо смотрелся при печати) под именем
-\verb!logo.pdf!. Настроить размер изображения с логотипом можно
-в~соответствующих местах файлов \verb!title.tex!  отдельно для
-диссертации и автореферата. Если вам логотип не~нужен, то просто
-удалите файл с~логотипом.
+В общем случае задача распределения управляющих воздействий для случая избыточных систем управления ведет к задаче численной оптимизации с линейными ограничениями, решение которой сложно реализовать для высокочастотных управляющих контуров в условиях операционных систем реального времени.
 
-\ifsynopsis
-Этот абзац появляется только в~автореферате.
-Для формирования блоков, которые будут обрабатываться только в~автореферате,
-заведена проверка условия \verb!\!\verb!ifsynopsis!.
-Значение условия задаётся в~основном файле документа (\verb!synopsis.tex! для
-автореферата).
-\else
-Этот абзац появляется только в~диссертации.
-Через проверку условия \verb!\!\verb!ifsynopsis!, задаваемого в~основном файле
-документа (\verb!dissertation.tex! для диссертации), можно сделать новую
-команду, обеспечивающую появление цитаты в~диссертации, но~не~в~автореферате.
-\fi
+В настоящее время имеется достаточное количество обзорных статей в иностранной научной литературе, посвященных задаче распределения управляющих воздействий, включая как отдельные приложения – суда, подводные аппараты  \cite{fossen2006survey}, летательные средства \cite{oppenheimer2006control}, так и междисциплинарные \cite{10.1016/j.automatica.2013.01.035}.
+В отечественной литературе такая постановка задачи обычно не выделяется в отдельный класс \cite{филаретов2016особенности} и, например, задача аккомодации к отказам исполнительных механизмов решается в рамках управления объектом целиком  \cite{мартынова2020подход, зыбин2014аналитическое}.
+Впрочем, упоминание задачи распределения управляющих воздействий можно найти в отдельных статьях \cite{амбросовский2013распределение, воловодов2003распределение, амбросовский2014алгоритмы} и главах диссертаций \cite{власов2016адаптивное}.
+
+% \ifsynopsis
+% Этот абзац появляется только в~автореферате.
+% Для формирования блоков, которые будут обрабатываться только в~автореферате,
+% заведена проверка условия \verb!\!\verb!ifsynopsis!.
+% Значение условия задаётся в~основном файле документа (\verb!synopsis.tex! для
+% автореферата).
+% \else
+% Этот абзац появляется только в~диссертации.
+% Через проверку условия \verb!\!\verb!ifsynopsis!, задаваемого в~основном файле
+% документа (\verb!dissertation.tex! для диссертации), можно сделать новую
+% команду, обеспечивающую появление цитаты в~диссертации, но~не~в~автореферате.
+% \fi
 
 % {\progress}
 % Этот раздел должен быть отдельным структурным элементом по
@@ -52,47 +35,58 @@
 % темы. Нужен он отдельным структурынм элемементом или нет ---
 % смотрите другие диссертации вашего совета, скорее всего не нужен.
 
-{\aim} данной работы является \ldots
+{\aim} диссертационной работы является разработка методов энергоэффективного и отказоустойчивого управления избыточным движительно-рулевым комплексом подводного аппарата с учётом динамики исполнительных механизмов и их гидродинамических особенностей.
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
-  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
-  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
-  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
-  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
+  \item изучить модели описания исполнительных механизмов (маршевые движители, подруливающие движители, рули управления) ДРК подводного аппарата учитывающие особенности их поведения в набегающем потоке;
+  \item разработать метод формального описания, анализа и реконфигурации в режиме реального времени ДРК оснащенного произвольным набором исполнительных механизмов;
+  \item разработать и реализовать дублирующий метод определения скорости набегающего потока по параметрам работы электроприводов маршевых движителей;
+  \item разработать и реализовать энергетически оптимальный отказоустойчивый метод распределения управляющих воздействий для АНПА устойчивый к неполному знанию скорости набегающего потока;
+  \item разработать и реализовать метод плавного перераспределения управляющего воздействия при переходах между различными типами движения;
+  \item провести проверку эффективности разработанного метода распределения управляющих воздействий на базе модельных экспериментов.
 \end{enumerate}
-
 
 {\novelty}
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
-  \item Впервые \ldots
-  \item Впервые \ldots
-  \item Было выполнено оригинальное исследование \ldots
+  \item разработан метод определения скорости движения подводного аппарата относительно воды в установившемся режиме по изменению параметров работы маршевых движителей;
+  \item разработан метод формирования глобальных границ и коэффициентов решения задачи оптимального распределения управляющих воздействий ДРК адаптивный к скорости набегающего потока и оценки его достоверности;
+  \item разработан метод перераспределения управляющих воздействий при смене типа движения многофункционального АНПА.
 \end{enumerate}
 
 {\influence} \ldots
 
-{\methods} \ldots
+{\methods} В диссертационной работе использовались методы теории управления, линейной и нелинейной оптимизации; методы математического и имитационного моделирования, современные средства разработки программных комплексов и моделирования.
 
 {\defpositions}
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
-  \item Первое положение
-  \item Второе положение
-  \item Третье положение
-  \item Четвертое положение
+  \item Предложен метод формального описания и анализа ДРК подводного аппарата, который отличается тем, что каждый движитель 
+
+  с произвольным количеством и типом используемых исполнительных механизмов и его программная реализация;
+  \item метод оценки скорости движения подводного аппарата относительно воды в установившемся режиме по изменению параметров работы его маршевых движителей;
+  \item метод энергоэффективного и отказоустойчивого распределения управляющих воздействий на ДРК подводного аппарата адаптивный к скорости набегающего потока и оценки его достоверности;
+  \item программная реализация метода перераспределения управляющих воздействий при смене типа движения многофункционального АНПА.
 \end{enumerate}
-В папке Documents можно ознакомиться с решением совета из Томского~ГУ
-(в~файле \verb+Def_positions.pdf+), где обоснованно даются рекомендации
-по~формулировкам защищаемых положений.
 
-{\reliability} полученных результатов обеспечивается \ldots \ Результаты находятся в соответствии с результатами, полученными другими авторами.
-
+{\reliability} Достоверность полученных выводов определяется корректным применением методов математического моделирования сложных систем и обработки экспериментальных данных. Обоснованность полученных методов и алгоритмов основывается на сопоставлении полученных результатов с результатами, полученными другими известными методами и алгоритмами.
 
 {\probation}
-Основные результаты работы докладывались~на:
-перечисление основных конференций, симпозиумов и~т.\:п.
+Основные результаты диссертации
+докладывались и обсуждались на следующих конференциях:
+\begin{enumerate}
+    \item ``Управление в морских и аэрокосмических системах (УМАС-2016)'' (Санкт-Петербург, 04–06 октября 2016 года);
+    \item Всероссийская научно-техническая конференция ``Технические проблемы освоения мирового океана'' (г. Владивосток, 2017);
+    \item ``International Symposium on Underwater Technology, UT'' (Haeundae, Busan, 21–24 февраля 2017 года);
+    \item ``2018 OCEANS - MTS/IEEE Kobe Techno-Oceans, OCEANS - Kobe 2018'' (Kobe, 28–31 мая 2018 года);
+    \item Всероссийская научно-техническая конференция ``Технические проблемы освоения мирового океана'' (г. Владивосток, 30 сентября – 3 октября 2019 г.);
+    \item ``2019 IEEE International Underwater Technology Symposium, UT 2019'' (Kaohsiung, 16–19 апреля 2019 года);
+    \item Международная конференция по промышленному инжинирингу и современным технологиям ``FarEastCon-2019'' (г. Владивосток, 1-4 сентября 2019 года);
+    \item Международная конференция по промышленному инжинирингу и современным технологиям ``FarEastCon-2020'' (г. Владивосток, 5-8 октября 2019 года);
+    \item ``Global Oceans 2020: Singapore - U.S. Gulf Coast'' (5-14 октября 2020 года);
+    \item 
+\end{enumerate}
 
-{\contribution} Автор принимал активное участие \ldots
+{\contribution} Автор принимал участие в постановке цели и задач по теме исследования, разработал методы и алгоритмы, предложенные в данной работе, обработал и проанализировал экспериментальные данные, участвовал в обсуждении полученных результатов, подготовке научных статей, материалов конференций, участвовал на конференциях и семинарах.
 
 \ifnumequal{\value{bibliosel}}{0}
 {%%% Встроенная реализация с загрузкой файла через движок bibtex8. (При желании, внутри можно использовать обычные ссылки, наподобие `\cite{vakbib1,vakbib2}`).
@@ -178,34 +172,34 @@
         %     * при usefootcite==1, ссылка сработает нормально. В авторской библиографии будут только процитированные в refsection=0 работы.
 }
 
-При использовании пакета \verb!biblatex! будут подсчитаны все работы, добавленные
-в файл \verb!biblio/author.bib!. Для правильного подсчёта работ в~различных
-системах цитирования требуется использовать поля:
-\begin{itemize}
-        \item \texttt{authorvak} если публикация индексирована ВАК,
-        \item \texttt{authorscopus} если публикация индексирована Scopus,
-        \item \texttt{authorwos} если публикация индексирована Web of Science,
-        \item \texttt{authorconf} для докладов конференций,
-        \item \texttt{authorpatent} для патентов,
-        \item \texttt{authorprogram} для зарегистрированных программ для ЭВМ,
-        \item \texttt{authorother} для других публикаций.
-\end{itemize}
-Для подсчёта используются счётчики:
-\begin{itemize}
-        \item \texttt{citeauthorvak} для работ, индексируемых ВАК,
-        \item \texttt{citeauthorscopus} для работ, индексируемых Scopus,
-        \item \texttt{citeauthorwos} для работ, индексируемых Web of Science,
-        \item \texttt{citeauthorvakscopuswos} для работ, индексируемых одной из трёх баз,
-        \item \texttt{citeauthorscopuswos} для работ, индексируемых Scopus или Web of~Science,
-        \item \texttt{citeauthorconf} для докладов на конференциях,
-        \item \texttt{citeauthorother} для остальных работ,
-        \item \texttt{citeauthorpatent} для патентов,
-        \item \texttt{citeauthorprogram} для зарегистрированных программ для ЭВМ,
-        \item \texttt{citeauthor} для суммарного количества работ.
-\end{itemize}
-% Счётчик \texttt{citeexternal} используется для подсчёта процитированных публикаций;
-% \texttt{citeregistered} "--- для подсчёта суммарного количества патентов и программ для ЭВМ.
+% При использовании пакета \verb!biblatex! будут подсчитаны все работы, добавленные
+% в файл \verb!biblio/author.bib!. Для правильного подсчёта работ в~различных
+% системах цитирования требуется использовать поля:
+% \begin{itemize}
+%         \item \texttt{authorvak} если публикация индексирована ВАК,
+%         \item \texttt{authorscopus} если публикация индексирована Scopus,
+%         \item \texttt{authorwos} если публикация индексирована Web of Science,
+%         \item \texttt{authorconf} для докладов конференций,
+%         \item \texttt{authorpatent} для патентов,
+%         \item \texttt{authorprogram} для зарегистрированных программ для ЭВМ,
+%         \item \texttt{authorother} для других публикаций.
+% \end{itemize}
+% Для подсчёта используются счётчики:
+% \begin{itemize}
+%         \item \texttt{citeauthorvak} для работ, индексируемых ВАК,
+%         \item \texttt{citeauthorscopus} для работ, индексируемых Scopus,
+%         \item \texttt{citeauthorwos} для работ, индексируемых Web of Science,
+%         \item \texttt{citeauthorvakscopuswos} для работ, индексируемых одной из трёх баз,
+%         \item \texttt{citeauthorscopuswos} для работ, индексируемых Scopus или Web of~Science,
+%         \item \texttt{citeauthorconf} для докладов на конференциях,
+%         \item \texttt{citeauthorother} для остальных работ,
+%         \item \texttt{citeauthorpatent} для патентов,
+%         \item \texttt{citeauthorprogram} для зарегистрированных программ для ЭВМ,
+%         \item \texttt{citeauthor} для суммарного количества работ.
+% \end{itemize}
+% % Счётчик \texttt{citeexternal} используется для подсчёта процитированных публикаций;
+% % \texttt{citeregistered} "--- для подсчёта суммарного количества патентов и программ для ЭВМ.
 
-Для добавления в список публикаций автора работ, которые не были процитированы в
-автореферате, требуется их~перечислить с использованием команды \verb!\nocite! в
-\verb!Synopsis/content.tex!.
+% Для добавления в список публикаций автора работ, которые не были процитированы в
+% автореферате, требуется их~перечислить с использованием команды \verb!\nocite! в
+% \verb!Synopsis/content.tex!.
