Расширен словарь сокращений.

--- a/Dissertation/dictionary.tex
+++ b/Dissertation/dictionary.tex
@@ -6,3 +6,19 @@
 \textbf{ДРК} : Движительно-рулевой комплекс
 
 \textbf{ИМ} : Исполнительные механизмы
+
+\textbf{ТНПА} : Телеуправляемый необитаемый подводный аппарат
+
+\textbf{АНПА} : Автономный необитаемый подводный аппарат
+
+\textbf{ЦМ} : Центр масс
+
+\textbf{ЦВ} : Центр водоизмещения
+
+\textbf{СК} : Система координат
+
+\textbf{ССК} : Связанная с ПА система координат
+
+\textbf{ИСК} : Инерциальная система координат
+
+\textbf{РУ} : Рулевое устройство
