--- a/dissertation.tex
+++ b/dissertation.tex
@@ -65,9 +65,10 @@
 }{\counterwithin{figure}{chapter}}
 \ifnumequal{\value{contnumtab}}{1}{\counterwithout{table}{chapter}
 }{\counterwithin{table}{chapter}}
-\include{Dissertation/part1}           % Глава 1
-\include{Dissertation/part2}           % Глава 2
-\include{Dissertation/part3}           % Глава 3
+\include{Dissertation/partStatement}   % Глава 1
+\include{Dissertation/partPropulsion}  % Глава 2
+\include{Dissertation/partVelocity}    % Глава 3
+\include{Dissertation/partExperiment}  % Глава 4
 \include{Dissertation/conclusion}      % Заключение
 \include{Dissertation/acronyms}        % Список сокращений и условных обозначений
 \include{Dissertation/dictionary}      % Словарь терминов
